# az-create-tasks

./: README.md  az-create-tasks.py  pyproject.toml  requirements.txt  sample-template.yaml
src/az_create_tasks/: cli.py  parser.py  task_creator.py  template_parser.py
